--- a/deit_css.css
+++ b/deit_css.css
@@ -19,6 +19,9 @@ body {
     background-color: #F5EFE6;
     font-family: sans-serif;
   }
+  .filter-controls{
+    text-align: center;
+  }
 
 .filter-controls input[type="checkbox"] {
     display: none;
